--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,19 +2,19 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "WATCH",
+      "request": "launch",
+      "type": "node-terminal",
+      "command": "cds watch --profile hybrid"
+    },
+    {
       "name": "cds serve",
       "request": "launch",
       "type": "node",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "cds",
-      "args": [
-        "serve",
-        "--with-mocks",
-        "--in-memory?"
-      ],
-      "skipFiles": [
-        "<node_internals>/**"
-      ]
+      "args": ["serve", "--with-mocks", "--in-memory?"],
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
